// GENERATED by scripts/gen-commands.mjs -- do not edit by hand.
import { CommandNodeBase, CommandPart } from "../ir/node";
import { TreeCommandHandler } from "../ir/tree-command";
import { FunctionContext } from "../frontend/context";
import { CommandBuilder, litPart, argPart } from "./base";
import { Component } from "../values";

/** `datapack` */
export class DatapackNode extends CommandNodeBase {
  readonly type = "datapack";
}

export class DatapackBuilder extends CommandBuilder<DatapackNode> {
  create(id: string, description: Component): this {
    this.$set(litPart("datapack"), litPart("create"), argPart(id), argPart(description));
    return this;
  }

  disable(name: string): this {
    this.$set(litPart("datapack"), litPart("disable"), argPart(name));
    return this;
  }

  enable(name: string): this {
    this.$set(litPart("datapack"), litPart("enable"), argPart(name));
    return this;
  }

  enableAfter(name: string, existing: string): this {
    this.$set(litPart("datapack"), litPart("enable"), argPart(name), litPart("after"), argPart(existing));
    return this;
  }

  enableBefore(name: string, existing: string): this {
    this.$set(litPart("datapack"), litPart("enable"), argPart(name), litPart("before"), argPart(existing));
    return this;
  }

  enableFirst(name: string): this {
    this.$set(litPart("datapack"), litPart("enable"), argPart(name), litPart("first"));
    return this;
  }

  enableLast(name: string): this {
    this.$set(litPart("datapack"), litPart("enable"), argPart(name), litPart("last"));
    return this;
  }

  list(): this {
    this.$set(litPart("datapack"), litPart("list"));
    return this;
  }

  listAvailable(): this {
    this.$set(litPart("datapack"), litPart("list"), litPart("available"));
    return this;
  }

  listEnabled(): this {
    this.$set(litPart("datapack"), litPart("list"), litPart("enabled"));
    return this;
  }
}

export class DatapackHandler extends TreeCommandHandler<DatapackNode> {
  readonly type: DatapackNode["type"] = "datapack";
}

declare module "../frontend/context" {
  interface FunctionContext {
    /** `datapack` - `ctx.datapack()...` */
    datapack(): DatapackBuilder;
  }
}

FunctionContext.prototype.datapack = function (this: FunctionContext) {
  const node = new DatapackNode();
  this.emit(node);
  const parts: CommandPart[] = [litPart("datapack")];
  node.parts = parts;
  return new DatapackBuilder(node);
};
